// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-component > can switch between dynamic components without the need for a t-key 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const Comp1 = ctx['this'].constructor.components[ctx['this'].state.child];
    const b2 = toggler(Comp1, comp1({}, key + \`\\u00021\`, node, this, Comp1));
    return block1([], [b2]);
  }
}"
`;

exports[`t-component > can switch between dynamic components without the need for a t-key 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>child a</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-component > can switch between dynamic components without the need for a t-key 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>child b</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-component > can use dynamic components (the class) if given (with different root tagname) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, []);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['this'].state.child);
    const Comp1 = ctx['this'].myComponent;
    return toggler(tKey_1, toggler(Comp1, comp1({}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, Comp1)));
  }
}"
`;

exports[`t-component > can use dynamic components (the class) if given (with different root tagname) 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>child a</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-component > can use dynamic components (the class) if given (with different root tagname) 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>child b</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-component > can use dynamic components (the class) if given 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { keyOf, createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, []);
  
  return function template(ctx, node, key = "") {
    const tKey_1 = keyOf(ctx['this'].state.child);
    const Comp1 = ctx['this'].myComponent;
    return toggler(tKey_1, toggler(Comp1, comp1({}, key + \`\\u0002k\${tKey_1}\\u00021\`, node, this, Comp1)));
  }
}"
`;

exports[`t-component > can use dynamic components (the class) if given 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>child a</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-component > can use dynamic components (the class) if given 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>child b</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-component > modifying a sub widget 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const Comp1 = ctx['this'].Counter;
    const b2 = toggler(Comp1, comp1({}, key + \`\\u00021\`, node, this, Comp1));
    return block1([], [b2]);
  }
}"
`;

exports[`t-component > modifying a sub widget 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  const hdlr_fn1 = (ctx)=>ctx['this'].state.counter++;
  
  let block1 = createBlock(\`<div><block-child-0/><button block-handler-0="click">Inc</button></div>\`, [hdlr_fn1]);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.counter, node, key, "\\u00021");
    return block1([ctx], [b2]);
  }
}"
`;

exports[`t-component > switching dynamic component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, []);
  
  return function template(ctx, node, key = "") {
    const Comp1 = ctx['this'].Child;
    return toggler(Comp1, comp1({}, key + \`\\u00021\`, node, this, Comp1));
  }
}"
`;

exports[`t-component > switching dynamic component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>child a</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-component > switching dynamic component 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child b\`);
  }
}"
`;

exports[`t-component > t-component works in simple case 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, []);
  
  return function template(ctx, node, key = "") {
    const Comp1 = ctx['this'].Child;
    return toggler(Comp1, comp1({}, key + \`\\u00021\`, node, this, Comp1));
  }
}"
`;

exports[`t-component > t-component works in simple case 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>child</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-component with two classes of the same name > destroying the app while the other class's render is pending destroys both 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const props1 = {};
    const Comp1 = ctx['this'].state.C;
    const b2 = toggler(Comp1, comp1(props1, key + \`\\u00021\`, node, this, Comp1));
    return block1([], [b2]);
  }
}"
`;

exports[`t-component with two classes of the same name > destroying the app while the other class's render is pending destroys both 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span>B<block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.n, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-component with two classes of the same name > destroying the app while the other class's render is pending destroys both 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>C</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-component with two classes of the same name > switching back before the other class rendered keeps the mounted component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const Comp1 = ctx['this'].state.C;
    const b2 = toggler(Comp1, comp1({}, key + \`\\u00021\`, node, this, Comp1));
    return block1([], [b2]);
  }
}"
`;

exports[`t-component with two classes of the same name > switching back before the other class rendered keeps the mounted component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span>B<block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.n, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-component with two classes of the same name > switching back before the other class rendered keeps the mounted component 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>C</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-component with two classes of the same name > the other class, once its pending render resolves, is a new instance of it in place of the mounted one 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, null, false, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const Comp1 = ctx['this'].state.C;
    const b2 = toggler(Comp1, comp1({}, key + \`\\u00021\`, node, this, Comp1));
    return block1([], [b2]);
  }
}"
`;

exports[`t-component with two classes of the same name > the other class, once its pending render resolves, is a new instance of it in place of the mounted one 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span>B<block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.n, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-component with two classes of the same name > the other class, once its pending render resolves, is a new instance of it in place of the mounted one 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>C</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;
